--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -4,8 +4,9 @@
 
 .round-img{
   border-radius:50%;
-  width: 120px;
-  height: 120px;
+  height: 60px;
+  margin-top: 12px;
+  margin-left: 200px;
 }
 
 .edit-profile-btn {
